# uv_setup

./: Cargo.toml
src/: main.rs
