[package]
name = "pwsh_download"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
indicatif = "0.17"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
zip = "0.6"
semver = "1.0"
regex = "1.10"